这里是找到了对应的注入位置（抛射物source的友军判断） 还没有解决stackmap报错的问题

--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ minecraft {
 
 jar {
     manifest {
-        attributes 'FMLCorePlugin': 'io.gitlab.dwarfyassassin.lotrucp.core.UCPCoreMod'
+        attributes 'FMLCorePlugin': 'com.github.epicnose.friendlypenetration.core.UCPCoreMod'
         attributes 'FMLCorePluginContainsFMLMod': 'true'
     }
 }
