--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.3.0"
+version = "alpha-v1.0.0"
 group= "com.epicnose"
 archivesBaseName = "LOTR-FriendlyPenetration"
 
