feat: update to gradle 8.8

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,29 @@
-#Intellij files
-out/
-.idea/
-*.iml
-
-#Gradle
-.gradle/
-
-#Eclipse
-bin/
-.settings/
+.gradle
+.settings
+/.idea/
+/.vscode/
+/run/
+/build/
+/eclipse/
 .classpath
 .project
-
-#Forge gradle
-run/
-build/
-
-#LOTRBP
-libs/LOTR_UpdatedLangFiles/
+/bin/
+/config/
+/crash-reports/
+/logs/
+options.txt
+/saves/
+usernamecache.json
+banned-ips.json
+banned-players.json
+eula.txt
+ops.json
+server.properties
+servers.dat
+usercache.json
+whitelist.json
+/out/
+*.iml
+*.ipr
+*.iws
+*.DS_Store
